# platform041

./: .gitignore  CMakeLists.txt  README.md  build.cmd
.github/workflows/: ci.yml
docs/: README.md
headers/: Bullet.hpp  ClassicWall.hpp  Coin.hpp  Controller.hpp  CustomWall.hpp  Enemy.hpp  Finish.hpp  GoldenWall.hpp  GoldenWallAdapter.hpp  KillingObstacle.hpp  Level.hpp  Menu.hpp  Player.hpp  Scores.hpp  WallType.hpp
res/: level1.json  level2.json
src/: Bullet.cpp  Bullet.hpp  ClassicWall.cpp  ClassicWall.hpp  Coin.cpp  Coin.hpp  Constants.hpp  Controller.cpp  Controller.hpp  CustomWall.cpp  CustomWall.hpp  Direction.hpp  Enemy.cpp  Enemy.hpp  Finish.cpp  Finish.hpp  GoldenWall.cpp  GoldenWallAdapter.cpp  KillingObstacle.cpp  KillingObstacle.hpp  Level.cpp  Level.hpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  Scores.cpp  main.cpp
